force-app/main/default/objects/ampi__Catalog_Objective__c/ampi__Catalog_Objective__c.object-meta.xml
<CustomObject>
    <description>Goal of a project; catalog object</description>
    <label>Objective</label>
    <nameField>
        <label>Objective Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Objectives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>