force-app/main/default/objects/ampi__Catalog_Objective__c/fields/ampi__Definition__c.field-meta.xml
<CustomField>
    <fullName>ampi__Definition__c</fullName>
    <description>This text area field is to provide a additional information for this objective.</description>
    <label>Definition</label>
    <type>TextArea</type>
</CustomField>