force-app/main/default/objects/ampi__Catalog_Objective__c/fields/ampi__Definition_Language_1__c.field-meta.xml
<CustomField>
    <fullName>ampi__Definition_Language_1__c</fullName>
    <description>Primary translated version of Definition__c. This value is printed in Definition_Translated__c when USER_LANGUAGE_CODE = 1.</description>
    <label>Definition Language 1</label>
    <type>TextArea</type>
</CustomField>