force-app/main/default/objects/ampi__Catalog_Objective__c/fields/ampi__Definition_Language_3__c.field-meta.xml
<CustomField>
    <fullName>ampi__Definition_Language_3__c</fullName>
    <description>Tertiary translated version of Definition__c. This value is printed in Definition_Translated__c when USER_LANGUAGE_CODE = 3.</description>
    <label>Definition Language 3</label>
    <type>TextArea</type>
</CustomField>