force-app/main/default/objects/ampi__Catalog_Objective__c/fields/ampi__Definition_Translated__c.field-meta.xml
<CustomField>
    <fullName>ampi__Definition_Translated__c</fullName>
    <description>Formula field to return a translated version of Definition__c if user is using Salesforce in a different language. Depending on user’s language locale, can return Definition__c, Definition_Language_1__c, Definition_Language_2__c, or Definition_Language_3__c. Displayed in ManageLogframes.</description>
    <formula>CASE($Label.ampi__USER_LANGUAGE_CODE,
    &apos;1&apos;, BLANKVALUE(ampi__Definition_Language_1__c, ampi__Definition__c),
    &apos;2&apos;, BLANKVALUE(ampi__Definition_Language_2__c, ampi__Definition__c),
    &apos;3&apos;, BLANKVALUE(ampi__Definition_Language_3__c, ampi__Definition__c),
    ampi__Definition__c
)</formula>
    <label>Definition Translated</label>
    <type>Text</type>
</CustomField>