force-app/main/default/objects/ampi__Catalog_Objective__c/fields/ampi__Level__c.field-meta.xml
<CustomField>
    <fullName>ampi__Level__c</fullName>
    <description>Picklist field to determine the level of an objective. This field is unrestricted and can be modified by subscribers. If this field&apos;s picklist values are modified, the Level__c field on Objective__c should also be modified to match.</description>
    <label>Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Impact</fullName>
            </value>
            <value>
                <fullName>Outcome</fullName>
            </value>
            <value>
                <fullName>Output</fullName>
            </value>
            <value>
                <fullName>Input</fullName>
            </value>
            <value>
                <fullName>Activity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>