force-app/main/default/objects/ampi__Catalog_Objective__c/fields/ampi__Parent_Objective__c.field-meta.xml
<CustomField>
    <fullName>ampi__Parent_Objective__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to objective that is parent to this objective record to indicate a hierarchy.</description>
    <label>Parent Objective</label>
    <referenceTo>ampi__Catalog_Objective__c</referenceTo>
    <relationshipLabel>Catalog Objectives (Parent Objective)</relationshipLabel>
    <relationshipName>Catalog_Objectives</relationshipName>
    <type>Lookup</type>
</CustomField>