force-app/main/default/objects/ampi__Catalog_Objective__c/fields/ampi__Related_Objective__c.field-meta.xml
<CustomField>
    <fullName>ampi__Related_Objective__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Objective</label>
    <referenceTo>ampi__Catalog_Objective__c</referenceTo>
    <relationshipLabel>Objectives</relationshipLabel>
    <relationshipName>Objectives</relationshipName>
    <type>Lookup</type>
</CustomField>