force-app/main/default/objects/ampi__Catalog_Objective__c/fields/ampi__xx_Include_In_Catalog__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Include_In_Catalog__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox field to include an objective in the catalog objectives for all projects</description>
    <inlineHelpText>Check this field if this project objective should be available in the catalog objective which is visible for all Projects. This field is checked by default when creating a new project objective.</inlineHelpText>
    <label>Include In Catalog?</label>
    <type>Checkbox</type>
</CustomField>